<resources>
    <string name="app_name">Driveria</string>
    <string name="mobile_number">Mobile Number (10 digits)</string>
    <string name="password">Password</string>
    <string name="signup">Welcome ,
    Sign up to continue</string>
    <string name="signin">Welcome ,
    Sign in to continue</string>
    <string name="signup_btn">SIGN UP</string>
    <string name="signin_btn">SIGN IN</string>
    <string name="enter_name">Name (Min. 3 characters)</string>
    <string name="address">Delivery Address</string>
    <string name="choose_password">Password (Min. 4 characters)</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="registration">Register</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="register_yourself">Don\'t have an account ? SIGN UP now</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="email">Email Address</string>

    <string name="enter_mobile_forgot_password">Enter your registered mobile number and email below :-</string>
    <string name="next">Next</string>
    <string name="app_logo">Logo of app</string>
    <string name="preference_file_name">Driveria Preference</string>
</resources>