<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".Registration_activity">


    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/signin"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="26sp"/>

    <ImageView
        android:id="@+id/smallLogo"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:padding="10dp"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:background="#FFF"
        android:elevation="15dp"
        android:src="@drawable/login"/>

    <EditText
        android:id="@+id/etNameSI"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:hint="@string/name"
        android:inputType="text"
        android:maxLength="10"
        android:maxLines="1"
        android:drawableStart="@drawable/baseline_person_24"
        android:drawablePadding="3dp"
        android:padding="10dp"
        android:autofillHints="name" />

    <EditText
        android:id="@+id/etEmailSI"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:maxLength="6"
        android:maxLines="1"
        android:drawableStart="@drawable/baseline_email_24"
        android:drawablePadding="3dp"
        android:padding="10dp"
        android:autofillHints="emailAddress" />

    <EditText
        android:id="@+id/etMobileNumberSI"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:hint="@string/mobile_number"
        android:inputType="number"
        android:maxLength="6"
        android:maxLines="1"
        android:drawableStart="@drawable/baseline_phone_iphone_24"
        android:drawablePadding="3dp"
        android:padding="10dp"
        android:autofillHints="phone" />

    <EditText
        android:id="@+id/etAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:hint="@string/address"
        android:inputType="text"
        android:maxLength="6"
        android:maxLines="1"
        android:drawableStart="@drawable/baseline_location_on_24"
        android:drawablePadding="3dp"
        android:padding="10dp"
        android:autofillHints="postalAddress" />

    <EditText
        android:id="@+id/etPasswordSI"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:hint="@string/choose_password"
        android:inputType="numberPassword"
        android:maxLength="6"
        android:maxLines="1"
        android:drawableStart="@drawable/baseline_lock_24"
        android:drawablePadding="3dp"
        android:padding="10dp"
        android:autofillHints="password" />

    <EditText
        android:id="@+id/etConfirmPasswordSI"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:hint="@string/confirm_password"
        android:inputType="numberPassword"
        android:maxLength="6"
        android:maxLines="1"
        android:drawableStart="@drawable/baseline_lock_24"
        android:drawablePadding="3dp"
        android:padding="10dp"
        android:autofillHints="password"/>

    <Button
        android:id="@+id/buttonSI"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:backgroundTint="@color/black"
        android:textColor="@color/white"
        android:text="@string/signin_btn" />




</LinearLayout>