<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ForgetPassword">

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/enter_mobile_forgot_password"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="26sp"/>

    <ImageView
        android:id="@+id/smallLogo"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:padding="10dp"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:background="#FFF"
        android:elevation="15dp"
        android:src="@drawable/login"/>

    <EditText
        android:id="@+id/etMobileNumberFP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp"
        android:hint="@string/mobile_number"
        android:inputType="number"
        android:maxLength="10"
        android:maxLines="1"
        android:drawableStart="@drawable/baseline_phone_iphone_24"
        android:drawablePadding="3dp"
        android:padding="10dp"
        android:autofillHints="phone" />

    <EditText
        android:id="@+id/etEmailFP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:maxLength="6"
        android:maxLines="1"
        android:drawableStart="@drawable/baseline_email_24"
        android:drawablePadding="3dp"
        android:padding="10dp"
        android:autofillHints="emailAddress" />

    <Button
        android:id="@+id/buttonForget"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:backgroundTint="@color/black"
        android:textColor="@color/white"
        android:text="@string/next" />

</LinearLayout>